--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,7 +2820,7 @@ ul.footer-nav-menu li:not(:last-child):after {
 
 .ttm-page-title-row {
     position: relative;
-    background-image: url(https://via.placeholder.com/1920X380/888888.jpg);
+    background-image: url(../images/banner/young-handsome-physician-medical-robe-with-stethoscope.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
