--- a/assets/css/appointment.css
+++ b/assets/css/appointment.css
@@ -23,7 +23,7 @@ body {
     margin: auto;
     padding: 40px;
     overflow: hidden;
-    background-image: url('https://i.imgur.com/8z1tx3u.jpg');
+    /* background-image: url('https://i.imgur.com/8z1tx3u.jpg'); */
     background-size: cover;
     border-radius: 5px;
     z-index: 20
@@ -46,10 +46,11 @@ body {
     margin-bottom: 30px
 }
 
-.booking-form .form-header h1 {
+.booking-form .form-header h2,
+h1 {
     font-weight: 700;
     text-transform: capitalize;
-    font-size: 42px;
+    font-size: 37px;
     margin: 0px;
     color: #fff
 }
